--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "portal-vue": "^2.1.7",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-simple-alert": "^1.1.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
